styling and dimensions fix

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,34 +8,37 @@
     <link rel='stylesheet' href="style.css">
     <title>Container House</title>
 </head>
+
 <body>
-    <h1>container home planning</h1>
-    <div class= "container">
+    <h1>container home planner</h1>
+    <!-- <button class='save'>save</button>
+    <button class= 'load'>load</button> -->
+    <div class="container">
         <div class="boxStack fourty">
-            <div class="box">12 x 40</div>
-            <div class="box">12 x 40</div>
-            <div class="box">12 x 40</div>
-            <div class="box">12 x 40</div>
-            <div class="box">12 x 40</div>
-            <div class="box">12 x 40</div>
-            <div class="box">12 x 40</div>
-            <div class="box">12 x 40</div>
-            <div class="box">12 x 40</div>
-            <div class="box">12 x 40</div>
+            <div class="box">8 x 40</div>
+            <div class="box">8 x 40</div>
+            <div class="box">8 x 40</div>
+            <div class="box">8 x 40</div>
+            <div class="box">8 x 40</div>
+            <div class="box">8 x 40</div>
+            <div class="box">8 x 40</div>
+            <div class="box">8 x 40</div>
+            <div class="box">8 x 40</div>
+            <div class="box">8 x 40</div>
         </div>
         <div class="boxStack twenty">
-            <div class="box">10 x 20</div>
-            <div class="box">10 x 20</div>
-            <div class="box">10 x 20</div>
-            <div class="box">10 x 20</div>
-            <div class="box">10 x 20</div>
-            <div class="box">10 x 20</div>
-            <div class="box">10 x 20</div>
-            <div class="box">10 x 20</div>
-            <div class="box">10 x 20</div>
-            <div class="box">10 x 20</div>
+            <div class="box">8 x 20</div>
+            <div class="box">8 x 20</div>
+            <div class="box">8 x 20</div>
+            <div class="box">8 x 20</div>
+            <div class="box">8 x 20</div>
+            <div class="box">8 x 20</div>
+            <div class="box">8 x 20</div>
+            <div class="box">8 x 20</div>
+            <div class="box">8 x 20</div>
+            <div class="box">8 x 20</div>
         </div>
-        <div class ='boxStack items'>
+        <div class='boxStack items'>
             <div class="box couch">average couch</div>
             <div class="box couch">average couch</div>
             <div class="box couch">average couch</div>
@@ -47,6 +51,7 @@
             <div class="box door"></div>
         </div>
     </div>
-    <script src ='script.js'></script>
+    <script src='script.js'></script>
 </body>
+
 </html>
